--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=5.6.0",
     "codenamephp/platform.core": "~1.0",
-    "mnapoli/php-di": "~4.4"
+    "mnapoli/php-di": "~5@dev"
   },
   "require-dev": {
     "codenamephp/platform.test": "~1.0",
