--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
       "email": "bastian@codename-php.de"
     }
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.6.0",
-    "codenamephp/platform.core": "~1.0",
-    "mnapoli/php-di": "~5@dev"
+    "codenamephp/platform.core": "^1",
+    "php-di/php-di": "^5"
   },
   "require-dev": {
-    "codenamephp/platform.test": "~1.0",
+    "codenamephp/platform.test": "^1",
+    "doctrine/cache": "~1.4",
     "phing/phing": "~2.9",
     "phploc/phploc": "~2.0",
     "pdepend/pdepend": "~1.0",
