--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
   "require-dev": {
     "codenamephp/platform.test": "^1",
     "doctrine/cache": "~1.4",
-    "phing/phing": "~2.9",
-    "phploc/phploc": "~2.0",
-    "pdepend/pdepend": "~1.0",
-    "phpmd/phpmd": "~1.4",
-    "sebastian/phpcpd": "~2.0",
-    "phpdocumentor/phpdocumentor": "~2.8"
+    "pdepend/pdepend": "^2",
+    "squizlabs/php_codesniffer": "^2",
+    "phploc/phploc": "^3",
+    "phpmd/phpmd": "^2",
+    "sebastian/phpcpd": "^2",
+    "theseer/phpdox": "^0.8"
   },
   "autoload": {
     "classmap": ["src/main/php"]
