--- a/build.xml
+++ b/build.xml
@@ -157,11 +157,10 @@
           unless="phpcs.done"
           description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
     <exec executable="${phpcs}" taskname="phpcs">
-      <arg value="--standard=PSR2" />
+      <arg value="--standard=${basedir}/build/phpcs.xml" />
       <arg value="--extensions=php" />
       <arg value="--ignore=autoload.php" />
       <arg path="${basedir}/src/main/php" />
-      <arg path="${basedir}/src/test/php" />
     </exec>
 
     <property name="phpcs.done" value="true"/>
@@ -174,11 +173,10 @@
     <exec executable="${phpcs}" output="/dev/null" taskname="phpcs">
       <arg value="--report=checkstyle" />
       <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-      <arg value="--standard=PSR2" />
+      <arg value="--standard=${basedir}/build/phpcs.xml" />
       <arg value="--extensions=php" />
       <arg value="--ignore=autoload.php" />
       <arg path="${basedir}/src/main/php" />
-      <arg path="${basedir}/src/test/php" />
     </exec>
 
     <property name="phpcs.done" value="true"/>
