--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,8 +11,11 @@ auxiliary.org-netbeans-modules-php-phpunit.phpUnit_2e_path=vendor/bin/phpunit
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
+file.reference.platform.di-vendor=vendor
 file.reference.test-php=src/test/php
-include.path=${php.global.include.path}
+include.path=\
+    ${file.reference.platform.di-vendor}:\
+    ${php.global.include.path}
 php.version=PHP_56
 project.license=apache20
 source.encoding=UTF-8
