--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="name-of-project" default="full-build">
+<project name="ci" default="full-build">
 
   <property name="pdepend" value="${basedir}/vendor/bin/pdepend"/>
   <property name="phpcpd"  value="${basedir}/vendor/bin/phpcpd"/>
   <property name="phpcs"   value="${basedir}/vendor/bin/phpcs"/>
-  <property name="phpcbf"   value="${basedir}/vendor/bin/phpcbf"/>
+  <property name="phpcbf"  value="${basedir}/vendor/bin/phpcbf"/>
   <property name="phpdox"  value="${basedir}/vendor/bin/phpdox"/>
   <property name="phploc"  value="${basedir}/vendor/bin/phploc"/>
   <property name="phpmd"   value="${basedir}/vendor/bin/phpmd"/>
@@ -23,7 +23,7 @@
           description="Performs a lint check and runs the tests (without generating code coverage reports)"/>
 
   <target name="static-analysis"
-          depends="lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci"
+          depends="lint,phpcomp-ci,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci"
           description="Performs static analysis" />
 
   <!-- Adjust the threadCount attribute's value to the number of CPUs -->
@@ -35,6 +35,7 @@
         <antcall target="phpmd-ci"/>
       </sequential>
       <antcall target="lint"/>
+      <antcall target="phpcomp-ci"/>
       <antcall target="phpcpd-ci"/>
       <antcall target="phpcs-ci"/>
       <antcall target="phploc-ci"/>
@@ -167,9 +168,22 @@
     <property name="phpcs.done" value="true"/>
   </target>
 
+  <target name="phpcomp"
+          unless="phpcomp.done"
+          description="Find incompatibilites for php versions">
+    <exec executable="${phpcs}" taskname="phpcomp">
+      <arg value="--standard=${basedir}/build/phpcomp.xml" />
+      <arg value="--extensions=php" />
+      <arg value="--ignore=autoload.php" />
+      <arg path="${basedir}/src/main/php" />
+    </exec>
+
+    <property name="phpcomp.done" value="true"/>
+  </target>
+
   <target name="phpcbf"
           unless="phpcbf.done"
-          description="Find coding standard violations using PHP_CodeSniffer and fix them. Intended for usage on the command line before committing.">
+          description="Find coding standard violations using PHP_CodeSniffer and fix them automaticly.">
     <exec executable="${phpcbf}" taskname="phpcbf">
       <arg value="--standard=${basedir}/build/phpcs.xml" />
       <arg value="--extensions=php" />
@@ -177,7 +191,7 @@
       <arg path="${basedir}/src/main/php" />
     </exec>
 
-    <property name="phpcs.done" value="true"/>
+    <property name="phpcbf.done" value="true"/>
   </target>
 
   <target name="phpcs-ci"
@@ -194,6 +208,22 @@
     </exec>
 
     <property name="phpcs.done" value="true"/>
+  </target>
+
+  <target name="phpcomp-ci"
+          unless="phpcomp.done"
+          depends="prepare"
+          description="Find incompatiblities for php versions.">
+    <exec executable="${phpcs}" resultproperty="result.phpcomp" output="/dev/null" taskname="phpcomp">
+      <arg value="--report=checkstyle" />
+      <arg value="--report-file=${basedir}/build/logs/checkstyle-phpcomp.xml" />
+      <arg value="--standard=${basedir}/build/phpcomp.xml" />
+      <arg value="--extensions=php" />
+      <arg value="--ignore=autoload.php" />
+      <arg path="${basedir}/src/main/php" />
+    </exec>
+
+    <property name="phpcomp.done" value="true"/>
   </target>
 
   <target name="phpcpd"
@@ -259,6 +289,13 @@
       <condition>
         <not>
           <equals arg1="${result.phpunit}" arg2="0"/>
+        </not>
+      </condition>
+    </fail>
+    <fail message="PHPComp did not finish successfully">
+      <condition>
+        <not>
+          <equals arg1="${result.phpcomp}" arg2="0"/>
         </not>
       </condition>
     </fail>
