--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
     <delete dir="${basedir}/build/logs"/>
     <delete dir="${basedir}/build/pdepend"/>
     <delete dir="${basedir}/build/phpdox"/>
+    <delete dir="${basedir}/build/xml"/>
     <property name="clean.done" value="true"/>
   </target>
 
