--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,6 @@
 /nbproject export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/build.xml
+/build.xml export-ignore
+/build export-ignore
+/Jenkinsfile export-ignore
