--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "codenamephp/platform.di",
+  "description": "Simple dependency injection container based on www.php-di.org",
   "type": "library",
   "license": "Apache-2.0",
   "authors": [
@@ -14,7 +15,7 @@
     "php-di/php-di": "^5"
   },
   "require-dev": {
-    "codenamephp/platform.test": "^1",
+    "codenamephp/platform.test": "^2",
     "doctrine/cache": "~1.4",
     "pdepend/pdepend": "^2",
     "squizlabs/php_codesniffer": "^2",
