--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,7 @@
     <mkdir dir="${basedir}/build/logs"/>
     <mkdir dir="${basedir}/build/pdepend"/>
     <mkdir dir="${basedir}/build/phpdox"/>
+    <mkdir dir="${basedir}/build/xml"/>
     <property name="prepare.done" value="true"/>
   </target>
 
