--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /src/test export-ignore
 /nbproject export-ignore
+/.idea export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /build.xml export-ignore
