--- a/composer.json
+++ b/composer.json
@@ -15,23 +15,30 @@
     "php-di/php-di": "^5"
   },
   "require-dev": {
-    "codenamephp/platform.test": "^2",
+    "ext-xdebug": "*",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.4",
     "doctrine/cache": "~1.4",
+    "mockery/mockery": "^1.1",
     "pdepend/pdepend": "^2",
-    "squizlabs/php_codesniffer": "^2",
-    "phploc/phploc": "^3",
+    "phploc/phploc": "^4.0",
     "phpmd/phpmd": "^2",
-    "sebastian/phpcpd": "^2",
+    "phpunit/phpunit": "^7.3",
+    "sebastian/phpcpd": "^4.0",
+    "squizlabs/php_codesniffer": "^3.3",
     "theseer/phpdox": "^0.8",
-    "dealerdirect/phpcodesniffer-composer-installer": "*",
-    "frenck/php-compatibility": "*"
+    "wimg/php-compatibility": "^8.2"
   },
   "autoload": {
-    "classmap": ["src/main/php"]
+    "psr-0": {
+      "de\\codenamephp\\": ["src/main/php"]
+    }
   },
   "autoload-dev": {
     "psr-0": {
-      "de\\codenamephp\\": ["src/main/php", "src/test/php"]
+      "de\\codenamephp\\": ["src/test/php"]
     }
+  },
+  "config": {
+    "sort-packages": true
   }
 }
