--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require-dev": {
     "ext-xdebug": "*",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.4",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.5",
     "doctrine/cache": "~1.4",
     "mockery/mockery": "^1.1",
     "pdepend/pdepend": "^2",
@@ -25,7 +25,7 @@
     "phpunit/phpunit": "^7",
     "sebastian/phpcpd": "^4.0",
     "squizlabs/php_codesniffer": "^3.3",
-    "wimg/php-compatibility": "^8.2"
+    "phpcompatibility/php-compatibility": "^9.0"
   },
   "autoload": {
     "psr-0": {
