WIP #19 - Removed jenkins, old build tools and added travis - Made classes final - Added type hints

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-/nbproject/private/
-/target/
-/build/phpdox/
-/build/api/
-/build/coverage/
-/build/logs/
-/build/pdepend/
-/cache.properties
-/build/xml/
-
+/.cache/*
 
 # Created by https://www.gitignore.io/api/phpstorm,composer
 
