--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
-/src/test export-ignore
-/nbproject export-ignore
+/test export-ignore
+/tools export-ignore
 /.idea export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/build.xml export-ignore
-/build export-ignore
-/Jenkinsfile export-ignore
+/.cache export-ignore
+/phive.xml export-ignore
+/phpcomp.xml export-ignore
+/psalm.xml export-ignore
