--- a/composer.json
+++ b/composer.json
@@ -10,34 +10,47 @@
     }
   ],
   "require": {
-    "php": "^7",
+    "php": "^7.4",
     "codenamephp/platform.core": "^1",
     "php-di/php-di": "^6"
   },
   "require-dev": {
-    "ext-xdebug": "*",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.5",
-    "doctrine/cache": "~1.4",
     "mockery/mockery": "^1.1",
-    "pdepend/pdepend": "^2",
-    "phploc/phploc": "^4.0",
-    "phpmd/phpmd": "^2",
-    "phpunit/phpunit": "^7",
-    "sebastian/phpcpd": "^4.0",
+    "phpcompatibility/php-compatibility": "^9.0",
     "squizlabs/php_codesniffer": "^3.3",
-    "phpcompatibility/php-compatibility": "^9.0"
+    "symfony/filesystem": "^5.0"
   },
   "autoload": {
-    "psr-0": {
-      "de\\codenamephp\\": ["src/main/php"]
+    "psr-4": {
+      "de\\codenamephp\\platform\\di\\": [
+        "src"
+      ]
     }
   },
   "autoload-dev": {
-    "psr-0": {
-      "de\\codenamephp\\": ["src/test/php"]
+    "psr-4": {
+      "de\\codenamephp\\platform\\di\\test\\": [
+        "test"
+      ]
     }
   },
   "config": {
     "sort-packages": true
+  },
+  "scripts": {
+    "phpunit": "tools/phpunit.phar -c test/phpunit.dist.xml test/",
+    "psalm": "tools/psalm --threads=10 --diff --diff-methods --long-progress",
+    "phpcomp": "vendor/bin/phpcs --cache=.cache/phpcomp.cache --standard=phpcomp.xml --parallel=10 --extensions=php --ignore=autoload.php src/*",
+    "ci-all": [
+      "@phpunit",
+      "@phpcomp",
+      "@psalm"
+    ]
+  },
+  "scripts-descriptions": {
+    "phpunit": "Runs phpunit tests",
+    "phpcomp": "Runs php compatibility checks",
+    "psalm": "Runs psalm static analysis"
   }
 }
