--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,9 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.cache export-ignore
+/.logs export-ignore
+/.travis.yml export-ignore
+/infection.json.dist export-ignore
 /phive.xml export-ignore
 /phpcomp.xml export-ignore
 /psalm.xml export-ignore
