--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /.gitignore export-ignore
 /.cache export-ignore
 /.logs export-ignore
+/.php_cs.dist export-ignore
 /.travis.yml export-ignore
 /infection.json.dist export-ignore
 /phive.xml export-ignore
