Added composer-require-checker to ci

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
       "@phpcomp",
       "@psalm",
       "@composer-unused",
+      "@composer-require-checker",
       "@infection"
     ]
   },
