--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": "^7.4",
     "codenamephp/platform.core": "^1",
+    "marcj/topsort": "^1.1",
     "php-di/php-di": "^6",
     "psr/container": "^1.0"
   },
@@ -44,7 +45,7 @@
     "phpcomp": "vendor/bin/phpcs --cache=.cache/phpcomp.cache --standard=phpcomp.xml --parallel=10 --extensions=php --ignore=autoload.php src/*",
     "composer-unused": "tools/composer-unused --no-progress --no-interaction --profile",
     "composer-require-checker": "tools/composer-require-checker --no-interaction",
-    "infection": "tools/infection --min-msi=95 --min-covered-msi=95 --threads=4 --no-progress --show-mutations",
+    "infection": "tools/infection --min-msi=94 --min-covered-msi=95 --threads=4 --no-progress --show-mutations",
     "ci-all": [
       "@phpunit",
       "@phpcomp",
