Only build master and tags and exclude github-actions bot. We don't have to build branches since we test the PRs

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: php
 php:
  - '7.4'
 
+if: sender != "github-actions[bot]"
+
+branches:
+ only:
+  - master
+  - /^\d+\.\d+(\.\d+)?(-\S*)?$/
+
 cache:
  directories:
   - $HOME/.cache/composer
