--- a/.github/workflows/update-release-info.yml
+++ b/.github/workflows/update-release-info.yml
@@ -1,4 +1,3 @@
-
 name: Update Release Info
 on:
   push:
@@ -6,7 +5,7 @@ on:
       - master
 
 jobs:
-  update_version:
+  draft_release:
     runs-on: ubuntu-latest
     steps:
       - name: calculate next version
@@ -22,9 +21,3 @@ jobs:
           name: ${{ format('{0}', steps.version.outputs.next-version) }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/checkout@master
-      - name: update changelog
-        uses: patrickjahns/chlgr@v1
-        with:
-          commit-msg-prefix: '[CHANGELOG]'
-          release-version: ${{ steps.version.outputs.next-version }}
