--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -8,10 +8,14 @@ jobs:
  update_changelog:
   runs-on: ubuntu-latest
   steps:
+   - name: Checkout
+     uses: actions/checkout@v2
+
    - name: create changelog
      uses: heinrichreimer/github-changelog-generator-action@v2
      with:
       token: ${{ secrets.GITHUB_TOKEN }}
+
    - name: commit updated changelog
      uses: EndBug/add-and-commit@v5
      with:
