--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI
 on:
  push:
   branches: [ master ]
+  paths:
+   - '!**.md'
  pull_request:
   branches: [ master ]
+  paths:
+   - '!**.md'
 
 jobs:
  test_latest:
