--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -2,7 +2,8 @@ name: Draft Release
 on:
   push:
     branches: [ master ]
-
+    paths:
+      - '!**.md'
 jobs:
   draft_release:
     runs-on: ubuntu-latest
