--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
  test_latest:
+  name: Test with latest depndency versions
   runs-on: ubuntu-latest
 
   steps:
@@ -41,6 +42,7 @@ jobs:
      run: composer ci-all
 
  test_lowest:
+  name: Test with lowest dependency versions
   runs-on: ubuntu-latest
 
   steps:
