Let's see if signoff lets me push

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -24,5 +24,6 @@ jobs:
      with:
       message: "[CHANGELOG] Updated changelog"
       add: "CHANGELOG.md"
+      signoff: true
      env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
