--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,12 @@ name: CI
 on:
  push:
   branches: [ master ]
-  paths:
-   - '**'
-   - '!**.md'
+  paths-ignore:
+   - '**.md'
  pull_request:
   branches: [ master ]
-  paths:
-   - '**'
-   - '!**.md'
+  paths-ignore:
+   - '**.md'
 
 jobs:
  test_latest:
