--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,10 +71,10 @@ jobs:
   steps:
    - name: Use version from input
      id: version_input
-     if: ${{ github.event.inputs.home }}!
-     run: echo "::set-output version=version::${{ github.event.inputs.home }}!"
+     if: github.event.inputs.home
+     run: echo "::set-output name=version::${{ github.event.inputs.home }}!"
    - name: calculate next version
-     if: ${{ !github.event.inputs.home }}!"
+     if: !github.event.inputs.home
      id: version_drafter
      uses: patrickjahns/version-drafter-action@v1
      env:
