--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
    - name: Use version from input
      id: version_input
      if: github.event.inputs.home
-     run: echo "::set-output name=version::${{ github.event.inputs.home }}!"
+     run: echo "::set-output name=version::${{ github.event.inputs.version }}"
    - name: calculate next version
      if: '!github.event.inputs.home'
      id: version_drafter
@@ -90,6 +90,8 @@ jobs:
    - release_version
 
   steps:
+   - name: debug
+     run: echo ${{ github.event.inputs.version }}
    - name: checkout
      uses: actions/checkout@v2
 
