--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
      env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
    - name: debug
-     run: echo ${{ format('{0}', steps.version.outputs.next-version) }}
+     run: echo ${{ format('{0}', steps.version_drafter.outputs.next-version) }}
 
  update_changelog:
   name: Update the changelog with the current relase version
