Maybe I need to checkout first?

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,21 +67,23 @@ jobs:
   name: Find release version
   runs-on: ubuntu-latest
   outputs:
-   version: ${{ steps.version_input.outputs.version || steps.versiondrafter.outputs.next-version }}
+   version: ${{ steps.version_input.outputs.version || steps.version_drafter.outputs.next-version }}
 
   steps:
+   - name: checkout
+     uses: actions/checkout@v2
    - name: Use version from input
      id: version_input
      if: github.event.inputs.version
      run: echo "::set-output name=version::${{ github.event.inputs.version }}"
    - name: calculate next version
+     id: version_drafter
      if: '!github.event.inputs.version'
-     id: versiondrafter
-     uses: patrickjahns/version-drafter-action@v1.1.2
+     uses: patrickjahns/version-drafter-action@v1
      env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
    - name: debug
-     run: echo ${{ format('{0}', steps.versiondrafter.outputs.next-version) }}
+     run: echo ${{ format('{0}', steps.version_drafter.outputs.next-version) }}
 
  update_changelog:
   name: Update the changelog with the current relase version
