--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Release
 on:
- workflow_dispatch:
-  inputs:
-   version:
-    description: 'The version for the relase. If not set defaults to auto resolved version'
-    required: false
+ push:
+  branches: [ master ]
+  paths-ignore:
+   - '**.md'
 
 jobs:
  test_latest:
