--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,3 +4,19 @@ template: |
 exclude-labels:
  - "skip-changelog"
  - "invalid"
+
+version-resolver:
+ major:
+  labels:
+   - 'semver:major'
+   - 'Breaking Change'
+ minor:
+  labels:
+   - 'semver:minor'
+   - 'enhancement'
+   - 'Deprecation'
+ patch:
+  labels:
+   - 'semver:patch'
+   - 'bug'
+ default: patch
