--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^0.5 || ^0.6 || ^0.7",
     "phpcompatibility/php-compatibility": "^9.0",
-    "squizlabs/php_codesniffer": "^3.5",
-    "symfony/filesystem": "^5.0"
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
