Adding the hash for lockfile again, worst case: The restore key is always used so it's the same as it is now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
      uses: actions/cache@v2
      with:
       path: ${{ steps.composer-cache.outputs.dir }}
-      key: ${{ runner.os }}-composer-latest
-      restore-keys: ${{ runner.os }}-composer-latest
+      key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+      restore-keys: |
+       ${{ runner.os }}-composer-
 
    - name: Install dependencies
      if: steps.composer-cache.outputs.cache-hit != 'true'
@@ -59,8 +60,9 @@ jobs:
      uses: actions/cache@v2
      with:
       path: ${{ steps.composer-cache.outputs.dir }}
-      key: ${{ runner.os }}-composer-lowest
-      restore-keys: ${{ runner.os }}-composer-lowest
+      key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+      restore-keys: |
+       ${{ runner.os }}-composer-
 
    - name: Install dependencies
      if: steps.composer-cache.outputs.cache-hit != 'true'
