--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -2,10 +2,10 @@ name: Update Changelog
 on:
  push:
   branches: [ master ]
-  tags:
-   - '*'
   paths-ignore:
    - '**.md'
+ release:
+  types: [ published ]
 
 jobs:
  update_changelog:
