--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -1,7 +1,7 @@
 name: Draft Release
 on:
   push:
-    branches: [ master ]
+    branches: [ release ]
     paths-ignore:
       - '**.md'
 
@@ -12,7 +12,26 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+
       - name: draft release
+        id: draft_release
         uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: create changelog
+        uses: charmixer/auto-changelog-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          exclude_labels: "duplicate,question,invalid,wontfix,skip-changelog"
+          future_release: ${{ steps.draft_release.outputs.tag_name }}
+          release_branch: 'release'
+
+      - name: commit updated changelog
+        uses: EndBug/add-and-commit@v5
+        with:
+          message: "[CHANGELOG] Updated changelog"
+          add: "CHANGELOG.md"
+          signoff: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
