--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,17 @@
 /test export-ignore
 /tools export-ignore
+/.github export-ignore
 /.idea export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.cache export-ignore
 /.logs export-ignore
 /.php_cs.dist export-ignore
-/.travis.yml export-ignore
+/docker export-ignore
+/.env.dist export-ignore
+/docker-compose.yml export-ignore
 /infection.json.dist export-ignore
 /phive.xml export-ignore
 /phpcomp.xml export-ignore
 /psalm.xml export-ignore
+.gitkeep export-ignore
