--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,6 @@
     "php-di/php-di": "^6",
     "psr/container": "^1.0"
   },
-  "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.5 || ^0.6 || ^0.7",
-    "phpcompatibility/php-compatibility": "^9.0",
-    "squizlabs/php_codesniffer": "^3.5"
-  },
   "autoload": {
     "psr-4": {
       "de\\codenamephp\\platform\\di\\": [
@@ -39,26 +34,26 @@
     "sort-packages": true
   },
   "scripts": {
-    "phpunit": "tools/phpunit.phar -c test/phpunit.dist.xml test/",
-    "psalm": "tools/psalm --threads=10 --diff --diff-methods --long-progress",
-    "phpcomp": "vendor/bin/phpcs --cache=.cache/phpcomp.cache --standard=phpcomp.xml --parallel=10 --extensions=php --ignore=autoload.php src/*",
-    "composer-unused": "tools/composer-unused --no-progress --no-interaction --profile",
-    "composer-require-checker": "tools/composer-require-checker --no-interaction",
-    "infection": "XDEBUG_MODE=coverage tools/infection --min-msi=95 --min-covered-msi=95 --threads=4 --no-progress --show-mutations",
+    "phive-update": "XDEBUG_MODE=off phive update && git add tools/* phive.xml && git commit -m 'Updated phive dependencies'",
+    "phpunit": "XDEBUG_MODE=coverage tools/phpunit.phar -c test/phpunit.dist.xml test/",
+    "psalm": "XDEBUG_MODE=off tools/psalm --threads=10 --long-progress --no-diff",
+    "composer-unused": "XDEBUG_MODE=off tools/composer-unused.phar --no-progress --no-interaction",
+    "composer-require-checker": "XDEBUG_MODE=off tools/composer-require-checker --no-interaction",
+    "infection": "XDEBUG_MODE=coverage tools/infection --min-msi=100 --min-covered-msi=100 --threads=4 --no-progress --show-mutations",
     "ci-all": [
       "@phpunit",
-      "@phpcomp",
       "@psalm",
       "@composer-unused",
       "@infection"
     ]
   },
   "scripts-descriptions": {
+    "phive-update": "Runs a phive update and commits all tools and the phive.xml so PHPStorm won't run code formatting on the phars",
     "phpunit": "Runs phpunit tests",
-    "phpcomp": "Runs php compatibility checks",
     "psalm": "Runs psalm static analysis",
     "composer-unused": "Checks for unused composer packages",
     "composer-require-checker": "Checks for missing required composer packages",
-    "infection": "Creates mutation tests to discover missing test coverage"
+    "infection": "Creates mutation tests to discover missing test coverage",
+    "ci-all": "Runs all ci tools in sequence"
   }
 }
