--- a/infection.json.dist
+++ b/infection.json.dist
@@ -3,6 +3,9 @@
     "source": {
         "directories": [
             "src"
+        ],
+        "excludes": [
+          "/functions/"
         ]
     },
     "phpUnit": {
@@ -10,10 +13,7 @@
         "customPath": "tools\/phpunit.phar"
     },
     "logs": {
-        "text": ".logs/infection.log",
-        "badge": {
-            "branch": "master"
-        }
+        "text": ".logs/infection.log"
     },
     "mutators": {
         "@default": true
