--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
   ci:
     uses: codenamephp/workflows.php/.github/workflows/ci.yml@main
     with:
-      php-versions: '["7.4","8.0","8.1","8.2"]'
+      php-versions: '["8.0","8.1","8.2"]'
